#432 Upgrade to Spring Boot 4